--- a/js/07-原型链.md
+++ b/js/07-原型链.md
@@ -2,8 +2,225 @@
 
 [toc]
 
-## 对比各种继承？
+## [对比各种继承？](https://juejin.cn/post/6844904161071333384#comment)
 
-## 什么是原型链 ？
+### 原型链继承
 
-## 什么是作用域 ？
+子类原型指向父类实例
+
+```js
+function Parent() {
+    this.name = 'zhangsan';
+    this.children = ['A', 'B'];
+}
+
+Parent.prototype.getChildren = function() {
+    console.log(this.children);
+}
+
+function Child() {
+
+}
+
+Child.prototype = new Parent();
+
+var child1 = new Child();
+child1.children.push('child1')
+console.log(child1.getChildren()); // Array ["A", "B", "child1"]
+
+var child2 = new Child();
+child2.children.push('child2')
+console.log(child2.getChildren()); // Array ["A", "B", "child1", "child2"]
+```
+
+好处：
+
+- 子类可以访问到父类新增的原型方法和属性
+
+坏处：
+
+- 无法实现多继承
+- 创建实例不能传递参数
+- 引用类型的属性被所有实例共享
+
+### 借用构造函数继承
+
+在子类型构造函数的内部调用父类型构造函数
+
+```js
+function Parent(age) {
+    this.names = ['lucy', 'dom'];
+    this.age = age;
+
+    this.getName = function() {
+        return this.name;
+    }
+
+    this.getAge = function() {
+        return this.age;
+    }
+}
+
+function Child(age) {
+    Parent.call(this, age);
+}
+
+var child1 = new Child(18);
+child1.names.push('child1');
+console.log(child1.names); // [ 'lucy', 'dom', 'child1' ]
+
+var child2 = new Child(20);
+child2.names.push('child2');
+console.log(child2.names); // [ 'lucy', 'dom', 'child2' ]
+```
+
+好处：
+
+- 实例创建可以传递参数
+- 可以实现多继承
+- 避免了引用实例被所有实例共享
+
+坏处：
+
+- 实例并不是父类的实例（重复创建对象）
+- 不能继承父类原型上的方法，无法实现方法的复用
+
+### 组合继承
+
+```js
+function Parent(name, age) {
+    this.name = name;
+    this.age = age;
+    this.colors = ['red', 'green']
+    console.log('parent')
+}
+
+Parent.prototype.getColors = function() {
+    console.log(this.colors);
+}
+
+function Child(name, age, grade) {
+    Parent.call(this, name, age);// 创建子类实例时会执行一次
+    this.grade = grade;
+}
+
+Child.prototype = new Parent(); // 指定子类原型会执行一次
+Child.prototype.constructor = Child;// 校正构造函数
+Child.prototype.getName = function() {
+    console.log(this.name)
+}
+
+var c = new Child('alice', 10, 4)
+console.log(c.getName())
+
+> "parent"
+> "parent"
+> "alice"
+```
+
+好处：
+
+- 属性和原型链上上的方法都可以继承
+- 创建实例也可以传递参数
+
+坏处：
+
+- 创建子类时会调用两次超类的构造函数
+
+### 原型式继承
+
+这种方法并没有使用严格意义上的构造函数，思想是借助原型可以基于已有的对象创建新对象，同时还不必因此创建自定义类型。
+
+```js
+function object(o) {
+  function F(){};
+  F.prototype = o;
+  return new F();
+}
+```
+
+```js
+var person = {
+  name: 'alice',
+  friends: ['leyla', 'court', 'van']
+}
+
+var p1 = object(person);
+p1.name = 'p1';
+p1.friends.push('p1');
+
+var p2 = object(person);
+p2.name = 'p2';
+p2.friends.push('p2');
+
+console.log(p1.name)
+console.log(person.friends) 
+
+> Array ["leyla", "court", "van", "p1", "p2"]
+```
+
+优缺点：
+
+- 只能实现对象的继承
+- 引用类型的属性会被所有实例
+
+### 寄生继承
+
+好处：
+
+- 可以增强对象
+
+坏处：
+
+- 引用类型的属性被所有子类共享
+- 只能实现对象继承
+
+### 寄生组合继承
+
+复制了超类原型的副本，而不必调用超类构造函数；既能够实现函数复用，又能避免引用类型实例被子类共享，同时创建子类只需要调用一次超类构造函数
+
+### ES6继承
+
+寄生组合继承的语法糖
+
+## 什么是原型链
+
+JavaScript 是动态的，本身不提供一个 class 的实现。ES2015 / ES6 引入 class 关键字，只是语法糖，JavaScript 仍然基于原型
+
+每个实例对象（Object）都有一个私有属性（称之为 `__proto__` ）指向它的构造函数的原型对象（prototype）
+
+该原型对象也有一个自己的原型对象（`__proto__`），层层向上直到一个对象的原型对象为 null
+
+null 没有原型，是这个原型链中的最后一个环节
+
+JavaScript 中的对象都是位于原型链顶端的 Object 的实例
+
+综上，原型链就是从实例对象，指向原型对象，最终指向 null 的链接
+
+## 什么是作用域
+
+作用域即代码中的变量、函数和对象的作用范围，变量、函数和对象只在这个范围内有效，可以被访问，超出范围失效或不可见
+
+作用域可以提高程序逻辑的局部性、增强可靠性，减少命名冲突
+
+ES6 之前，JavaScript 有：
+
+- 全局作用域
+  - 最外层变量、函数和对象拥有全局作用域
+  - 全局对象，例如 global，window 等拥有全局作用域
+  - ES5 以下及 ES5 非严格模式，函数内未定义的变量，自动挂载在全局对象下，拥有全局作用域
+- 函数作用域
+  - 函数内部的变量、函数和对象拥有函数作用域，仅在函数内部可以被访问
+  - 使用 var 声明的变量和函数，如果不在作用域顶部，会进行变量提升，初始值为 undefined
+  - 使用 function 声明的函数，如果不再作用域顶部，会进行函数提升，函数声明及函数体都会提升到顶部
+
+ES6 及之后，JavaScript 增加：
+
+- 块级作用域，即花括号包裹的内部
+  - 使用 let 及 const 声明的变量和函数，不会变量提升，存在暂时性死区，即不能不声明直接使用，仅在块级作用域下可用，同一作用域下，不可重复声明
+
+**作用域链**:
+
+外层作用域不可访问内层作用域，内层作用域可以访问外层作用域
+
+如果内层作用域使用的变量、函数、对象在内层和外层作用域都找不到，会继续向外层作用域的更外层作用域寻找，直到找到或到最外层为止，这便是作用域链。
