--- a/js/09-正则.md
+++ b/js/09-正则.md
@@ -4,4 +4,21 @@
 
 ## 实现 trim ，去除首尾空格
 
+- ES5 `str.trim()`
+- 正则 `str.replace(/^\s+|\s+$/g, '')`
+
 ## 匹配查询字符串
+
+```js
+/**
+ * 获取指定的 querystring 中指定 name 的 value
+ * @param {String} name 查询名
+ * @param {String} querystring 查询到的值
+ * @return {String|undefined} 查询到返回String，没有返回undefined
+ */
+function query (name, querystring) {
+  if (name && name.match(/(?:http[s]?:|^)\/{2}.*?(?:\.)/)) name = encodeURIComponent(name) // 仅编码Url
+  const r = (querystring + '').match(new RegExp('(?:^|&)\\s*?' + name + '\\s*=\\s*(.*?)\\s*(?:&|$)')) 
+  return r === null ? undefined : decodeURIComponent(r[1])
+}
+```
