--- a/js/11-性能.md
+++ b/js/11-性能.md
@@ -4,6 +4,38 @@
 
 ## JavaScript 垃圾回收机制
 
+### 引用计数法
+
+清除没有引用指向的数据
+
+### 标记清除法
+
+标记根元素可达数据，清除不可达数据。可处理循环引用。现代浏览器广泛使用
+
+- 从根出发：包括 全局变量、本地函数的局部变量、参数、调用链上其它函数的局部变量和函数等
+- 标记相连的对象为可达和访问过
+- 直到引用链上没有未访问过的对象为止
+- 删除没有被标记过，即不可达对象
+
+### 标记清除法的优化
+
+标记清除存在 内存不连续，回收效率低，偶尔卡顿 的缺点
+
+- 只在CPU空闲时进行
+- 分代回收：
+  - 新生代：存活时间短，新生或经过一次垃圾回收的对象
+    - 复制：复制 From 的可达对象 到 To 空间，释放 不可达对象
+    - 晋升：复制时，To 空间使用超过 25%，晋升到 老生代
+    - 交换：交换 From 和 To 空间
+  - 老生代：存活时间长，经过一次被晋升或多次垃圾回收的对象
+    - 标记清除
+    - 标记整理：清除阶段先整理，将可达对象连续放置一起，再释放之外内存
+    增量标记：用增量标记代替全暂停，在回收间歇执行应用逻辑，避免卡顿
+
 ## 详解标记整理算法
+
+- 标记完成
+- 存活对象向内存空间一端移动
+- 移动完成，清理掉边界外的所有内存
 
 ## 前端常见的内存溢出途径，如何避免？
