--- a/js/03-ES6.md
+++ b/js/03-ES6.md
@@ -206,27 +206,27 @@
 - Promise.allSettled()
   - 一个resolve返回第一个resolve状态
   - 所有reject反悔请求失败
-- 逻辑运算赋值表达式
-  - ||= `a ||= b // 若 a 不存在，则 a = b`
-  - &&= `a &&= b // 若 a 存在，则 a = b`
-  - 空值合并运算符 ??
-    - ??= `a ??= b // 若 a 为 null 或 undefined，则 a = b`
-  - ?. `访问对象未定义属性`
-  - 数字分隔符_ `123_345_789`
+- ??= `a ??= b // 若 a 为 null 或 undefined，则 a = b`
 - `globalThis`: 不同环境均适用
   - web window
   - node global
 - `import()` 动态导入
 - for in 标准化
+- 空值合并运算符 ??
 
 ### ES12
 
 - String.prototype.replaceAll(old,new)
 - [FinalizationRegister(callback)](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/FinalizationRegistry)
-- WeakRefs commonjs-02:08:30
-  - 通过WeakMap WeakSet创建
+- WeakRefs
+  - `WeakRef.prototype.deref()`如果元对象没有消失获取原对象
   - 创建对象的弱引用：该对象可被回收即使他仍被引用
 - Promise.all()
+- 逻辑运算赋值表达式
+  - ||= `a ||= b // 若 a 不存在，则 a = b`
+  - &&= `a &&= b // 若 a 存在，则 a = b`
+  - ??= `a ??= b // 若 a 为 null 或 undefined，则 a = b`
+- 数字分隔符_ `123_345_789`
 
 ## == === Object.is()的区别
 
