浏览器相关

--- a/全栈/安全.md
+++ b/全栈/安全.md
@@ -324,7 +324,7 @@ CREATE TABLE ids_increment (
 
 - 1.限制输入（来源）
   - 前后端同时校验数据长度、类型、格式是否符合预期
-  - 始终过滤嵌入内容，如iframe object embed，土建始终过滤可执行代码，如script css中expression表达式和behavior属性
+  - 始终过滤嵌入内容，如iframe object embed，始终过滤可执行代码，如script css中expression表达式和behavior属性
   - 建立黑白名单，过滤不需要的标签、属性，内容或者只保留符合预期的项目
   - 在代理端、 服务器端、CDN 边缘节点、Web 服务器端、后台脚本端建立并维护 WAF 规则库或者购买相应安全防护服务，拦截以下请求：
     - 请求行：请求头，请求体包含敏感、恶意、垃圾内容
