--- a/全栈/计算机网络.md
+++ b/全栈/计算机网络.md
@@ -51,7 +51,7 @@
 
 ## 网络结构按五层和七层分别是？
 
-TCP / IP 体系结构
+TCP / IP 体系结构分为四层
 
 - 网络接口层
 - 网际层 IP
@@ -59,6 +59,8 @@ TCP / IP 体系结构
 - 应用层（TELNET FTP SMTP等）
 
 五层
+
+![ ](img/%E4%BA%94%E5%B1%82%E4%B8%83%E5%B1%82.png)
 
 - 物理层
 - 数据链路层
@@ -68,6 +70,8 @@ TCP / IP 体系结构
 
 七层：Open System Inerconnect Reference Model 开放式系统互联通信参考模型
 
+![ ](img/%E4%B8%83%E5%B1%82.png)
+
 - 物理层
 - 数据链路层
 - 网络层
@@ -76,7 +80,17 @@ TCP / IP 体系结构
 - 表达层
 - 应用层
 
+总结：
+
+- TCP/IP 分为四层，核心是二层的 IP 和三层的 TCP，HTTP 在第四层；
+- OSI 分为七层，基本对应 TCP/IP，TCP 在第四层，HTTP 在第七层；
+- OSI 可以映射到 TCP/IP，但这期间一、五、六层消失了；
+- 日常交流的时候我们通常使用 OSI 模型，用四层、七层等术语；
+- HTTP 利用 TCP/IP协议栈逐层打包再拆包，实现了数据传输，但下面的细节并不可见
+
 ## 什么是 TCP 三次握手，为什么要三次握手？
+
+TCP有6种标示:SYN(建立联机) ACK(确认) PSH(传送) FIN(结束) RST(重置) URG(紧急)
 
 ### 什么是 TCP 三次握手？
 
@@ -103,11 +117,19 @@ TCP / IP 体系结构
 
 ### 为什么要三次握手？
 
-- 客户端首次发送请求无应答，TCP 启动超时重传
-- 服务器收到重传的请求，建立连接，接收数据，关闭连接
-- 服务器收到客户端首次发送请求，再次建立连接，但客户端已经关闭连接
+- 第一次握手成功让服务端知道了客户端具有发送能力
+- 第二次握手成功让客户端知道了服务端具有接收和发送能力，但此时服务端并不知道客户端是否接收到了自己发送的消息
+- 所以第三次握手就起到了这个作用。经过三次通信后，服务端与客户端建立连接
 
 需要三次握手，客户端发送确认报文后再建立连接，避免重复建立连接
+
+### 为什么要四次挥手
+
+- 客户端要求断开连接，发送一个断开的请求，这个叫作（FIN）。
+- 服务端收到请求，然后给客户端一个 ACK，作为 FIN 的响应。
+- 这里你需要思考一个问题，可不可以像握手那样马上传 FIN 回去？
+- 其实这个时候服务端不能马上传 FIN，因为断开连接要处理的问题比较多，比如说服务端可能还有发送出去的消息没有得到 ACK；也有可能服务端自己有资源要释放。因此断开连接不能像握手那样操作——将两条消息合并。所以，服务端经过一个等待，确定可以关闭连接了，再发一条 FIN 给客户端。
+- 客户端收到服务端的 FIN，同时客户端也可能有自己的事情需要处理完，比如客户端有发送给服务端没有收到 ACK 的请求，客户端自己处理完成后，再给服务端发送一个 ACK。
 
 ## 浏览器有哪些请求方法？
 
@@ -190,35 +212,14 @@ TCP / IP 体系结构
   - Docker：在 Dockerfile 中记录了容器构建过程，可在集群中实现快速分发和快速部署
   - 虚拟机：支持镜像
 
-## 对比 Intel 的 VT-x，VT-d，VT-c
-
-- VT-x
-  - 运行 ESXI 上的 64位 Guest OS 基本指令
-  - Intel 运用Virtualization 虚拟化技术中的指令集
-  - 减少 VMM 干预，硬件支持 VMM 与 Guest OS
-  - 需要 VMM 干预，更快速、可靠、安全切换
-  - 更灵活、更稳定
-- VT-d
-  - 使一个 Guest OS 独占并直接存取硬件设备，加快读写速度
-  - 开启条件：北桥芯片支持，BIOS 开启
-- VT-c
-  - Virtual Machine Direct Connect
-    - 虚拟机的虚拟网络卡传送透过 VMM 来进行传输
-    - Guest OS 可以直接对 实体网络 I/O 进行存取
-    - 加强 VT-d，让多个虚拟机与实体 I/O 装置同时建立通道
-  - Virtual Machine Direct Queues
-    - 由 VMM 管理的虚拟化 Switch 转送封包给虚拟机
-      - 封包流向哪个虚拟机，需要额外 CPU 资源
-    - 透过网卡内建 Layer2 classifier / sorter 加速网络资料传送
-      - 在芯片里安排并通过队列排序好封包给虚拟机，不需要 VMM 支持
-        - 大大降低网络负载和 CPU 使用率
-
 ## 什么是 URL ？[mdn参考](https://developer.mozilla.org/zh-CN/docs/Learn/Common_questions/What_is_a_URL)
+
+![ ](./img/URL.png)
 
 - URL（Uniform Resource Locator）（统一资源定位器）是指定在 Internet 上可以找到资源的位置的文本字符串
   - 在 HTTP 的上下文中，URL 被叫做“网络地址”或“链接”
   - 浏览器在其地址栏显示 URL，例如 <https://leetcode-cn.com>
-  - URL 也可用于文件传输（FTP），电子及邮件（SMTP）和其他应用
+  - URL 也可用于文件传输（FTP），电子邮件（SMTP）和其他应用
 - URL 接口用于解析、构造、规范化和编码 URLs
   - 通过调用 URL 构造函数 new URL(url, [, base]) 创建并返回一个 URL 对象
     - 该 URL 对象引用使用绝对 URL 字符串
@@ -240,22 +241,24 @@ HTTP 报文由从客户端到服务器的请求和从服务器到客户端的响
 ### 组成
 
 - 起始行：报文描述
-- 头部：报文属性
-- 主体：报文数据
+- 头部字段集合：报文属性
+- 主体（消息正文）：报文数据
 
 ### 分类
 
 - 请求报文：客户端到服务端发送请求
   - 请求行：方法 + URL + HTTP协议版本
   - 通用信息头：Connection 等
-  - 请求头
-  - 实体头：POST / PUT / PATCH 的 Content-Type Content-Length 等
+    - 请求头
+    - 实体头：POST / PUT / PATCH 的 Content-Type Content-Length 等
+  - 空行
   - 报文主体
 - 响应报文：服务端到客户端返回数据
   - 状态行：状态码 + 原因
   - 通用信息头：Connection等
-  - 响应头
-  - 实体头：Content-Type Content-Length 等
+    - 响应头
+    - 实体头：Content-Type Content-Length 等
+  - 空行
   - 报文主体
 
 ## 常见的 HTTP 状态码有哪些？
@@ -430,7 +433,7 @@ POST 比 GET 安全，因为数据在地址栏上不可见
 
 ### 什么是 HTTPS？
 
-HTTPS 的全称是 Hyper Text Transfer Protocol over SecureSocket Layer，基于安全套接字协议 SSL，提供传输加密和身份认证保证传输的安全性，通过证书确认网站的真实性
+HTTPS 的全称是 Hyper Text Transfer Protocol over SecureSocket Layer，基于安全套接层协议 SSL，提供传输加密和身份认证保证传输的安全性，通过证书确认网站的真实性
 
 HTTP2.0 和 HTTP3.0 都只用于 https:// 网址
 
@@ -464,8 +467,40 @@ HTTP2.0 和 HTTP3.0 都只用于 https:// 网址
 |HTTP版本|1.0 - 1.1|2 - 3|
 |传输|明文，易被劫持|加密，不易劫持|
 |浏览器标识|不安全|安全|
-|CA|认证|不支持 支持|
+|CA认证|不支持|支持|
 |SEO|无优待|优先|
+
+### HTTPS的缺点
+
+- 证书费用及更新维护
+- 一定程度上降低访问速度
+- 消耗CPU资源
+
+### HTTPS工作原理
+
+HTTPS=HTTP+SSL/TLS
+
+TLS/SSL 的功能实现主要依赖于三类基本算法：散列函数 、对称加密和非对称加密，其利用非对称加密实现身份认证和密钥协商，对称加密算法采用协商的密钥对数据加密，基于散列函数验证信息的完整性。
+
+- 对称加密：加密和解密用同一个秘钥的加密方式叫做对称加密。Client客户端和Server端共用一套密钥
+- 非对称加密
+  - 有一对秘钥，公钥和私钥。
+  - 公钥加密的内容，只有私钥可以解开，私钥加密的内容，所有的公钥都可以解开，这里说的公钥都可以解开，指的是一对秘钥。
+  - 公钥可以发送给所有的客户端，私钥只保存在服务器端。
+
+TLS1.2握手过程
+
+![ ](img/TLS%E6%8F%A1%E6%89%8B%E8%BF%87%E7%A8%8B.png)
+
+1. Client发起一个HTTPS请求，连接443端口。这个过程可以理解成是请求公钥的过程
+2. erver端收到请求后，通过第三方机构私钥加密，会把数字证书（也可以认为是公钥证书）发送给Client。
+3. 浏览器安装后会自动带一些权威第三方机构公钥，使用匹配的公钥对数字签名进行解密。根据签名生成的规则对网站信息进行本地签名生成，然后两者比对。通过比对两者签名，匹配则说明认证通过，不匹配则获取证书失败。
+4. 在安全拿到服务器公钥后，客户端Client随机生成一个对称密钥，使用服务器公钥（证书的公钥）加密这个对称密钥，发送给Server(服务器)。
+5. Server(服务器)通过自己的私钥，对信息解密，至此得到了对称密钥，此时两者都拥有了相同的对称密钥。
+
+假公钥的解决办法
+
+- 第三方认证
 
 ## 对比 HTTP1.0 / HTTP1.1 / HTTP2.0 / HTTP3.0？
 
@@ -516,3 +551,145 @@ HTTP2.0进一步改善了传输性能
 |过期时间|写入时设置，用户可清除|自行配置，用户可清除对应Cookie，服务端自动清除过期 Session|
 |兼容性|需浏览器开启，用户同意|不依赖 Cookie 时，通过 Get 或自定请求字段传入|
 |作用范围|可设置跨子域，不可跨主域|用户身份唯一标识符不变时，可跨域，跨服务器。默认受限于 Cookie，仅限会话期间有效|
+
+## HTTP实体数据
+
+### 数据类型与编码
+
+MIME type
+
+- text：即文本格式的可读数据，我们最熟悉的应该就是 text/html 了，表示超文本文档，此外还有纯文本 text/plain、样式表 text/css 等。
+- image：即图像文件，有 image/gif、image/jpeg、image/png 等。
+- audio/video：音频和视频数据，例如 audio/mpeg、video/mp4 等。
+- application：数据格式不固定，可能是文本也可能是二进制，必须由上层应用程序来解释。常见的有 application/json，application/javascript、application/pdf 等，另外，如果实在是不知道数据是什么类型，像刚才说的“黑盒”，就会是 application/octet-stream，即不透明的二进制数据
+
+Ecoding type
+
+- gzip
+- defalte
+- br
+
+### 数据类型使用的字段头
+
+- accept
+- accept-encoding
+- content-type
+- content-encoding
+
+### 语言类型使用的字段头
+
+- Accept-Language
+- Content-Language
+- Accept-Charset
+
+### 内容协商的质量值q(quality factor)
+
+```http
+Accept: text/html,application/xml;q=0.9,*/*;q=0.8
+```
+
+它表示浏览器最希望使用的是 HTML 文件，权重是 1，其次是 XML 文件，权重是 0.9，最后是任意数据类型，权重是0.8。服务器收到请求头后，就会计算权重，再根据自己的实际情况优先输出 HTML 或者 XML
+
+### 内容协商的结果
+
+内容协商的过程是不透明的，每个 Web 服务器使用的算法都不一样。但有的时候，服务器会在响应头里多加一个Vary字段，记录服务器在内容协商时参考的请求头字段，给出一点信息，例如：
+
+```http
+Vary: Accept-Encoding,User-Agent,Accept
+```
+
+这个 Vary 字段表示服务器依据了 Accept-Encoding、User-Agent 和 Accept 这三个头字段，然后决定了发回的响应报文。
+
+Vary 字段可以认为是响应报文的一个特殊的“版本标记”。每当 Accept 等请求头变化时，Vary 也会随着响应报文一起变化。也就是说，同一个 URI 可能会有多个不同的“版本”，主要用在传输链路中间的代理服务器实现缓存服务，这个之后讲“HTTP 缓存”时还会再提到
+
+### 小结
+
+![ ](./img/%E5%B0%8F%E7%BB%93.png)
+
+## HTTP协议的优缺点
+
+特点：
+
+- 灵活可扩展。语法上面只规定了基本格式，空格分隔单词，换行分隔字段等；另一个就是传输形式上不仅可以传输文本，还可以传输图片视频等任意数据
+- 请求-应答模式
+- 可靠传输，基于TCP/IP
+- 无状态
+
+缺点：
+
+- 无状态
+- 明文传输：主要指的是头部
+- 队头阻塞：当http开启长连接时，共用一个TCP连接，当某个请求时间过长时，其他的请求只能处于阻塞状态，这就是队头阻塞问题。
+
+无状态：
+
+- http 协议对于事务处理没有记忆能力
+- 对同一个url请求没有上下文关系
+- 每次的请求都是独立的，它的执行情况和结果与前面的请求和之后的请求是无直接关系的，它不会受前面的请求应答情况直接影响，也不会直接影响后面的请求应答情况
+- 服务器中没有保存客户端的状态，客户端必须每次带上自己的状态去请求服务器
+- 请求过的资源下一次会继续进行请求
+
+状态是什么？
+
+- 【状态】的含义就是：客户端和服务器在某次会话中产生的数据
+- 那么对应的【无状态】就意味着：这些数据不会被保留
+- 通过增加cookie和session机制，现在的网络请求其实是有状态的
+- 在没有状态的http协议下，服务器也一定会保留你每次网络请求对数据的修改，但这跟保留每次访问的数据是不一样的，保留的只是会话产生的结果，而没有保留会话
+
+## 队头阻塞
+
+什么是队头阻塞？
+
+对于每一个HTTP请求而言，这些任务是会被放入一个任务队列中串行执行的，一旦队首任务请求太慢时，就会阻塞后面的请求处理，这就是HTTP队头阻塞问题
+
+解决办法
+
+- 并发请求
+- 域名分片
+
+## HTTP数据传输
+
+- 定长数据
+- 不定长数据
+
+## DNS是如何工作的
+
+DNS 协议提供的是一种主机名到 IP 地址的转换服务，就是我们常说的域名系统。是应用层协议，通常该协议运行在UDP协议之上，使用的是53端口号。
+
+查询过程，本地查询是递归查询，依次通过浏览器缓存 —>> 本地hosts文件 —>> 本地DNS解析器 —>> 本地DNS服务器 —>> 其他域名服务器请求。 接下来的过程就是迭代过程。
+
+为什么实用UDP协议作为传输层协议？
+
+- 为了避免使用TCP协议造成的连接延时
+
+## 正向代理和反向代理
+
+负载均衡的实现方式
+
+- 一种是使用反向代理的方式，用户的请求都发送到反向代理服务上，然后由反向代理服务器来转发请求到真实的服务器上，以此来实现集群的负载平衡。
+- 另一种是 DNS 的方式，DNS 可以用于在冗余的服务器上实现负载平衡。因为现在一般的大型网站使用多台服务器提供服务，因此一个域名可能会对应多个服务器地址。当用户向网站域名请求的时候，DNS 服务器返回这个域名所对应的服务器 IP 地址的集合，但在每个回答中，会循环这些 IP 地址的顺序，用户一般会选择排在前面的地址发送请求。以此将用户的请求均衡的分配到各个不同的服务器上，这样来实现负载均衡。这种方式有一个缺点就是，由于 DNS 服务器中存在缓存，所以有可能一个服务器出现故障后，域名解析仍然返回的是那个 IP 地址，就会造成访问的问题。
+
+## Connection: keep-alive
+
+### 什么是keep-alive
+
+我们知道HTTP协议采用“请求-应答”模式，当使用普通模式，即非KeepAlive模式时，每个请求/应答客户和服务器都要新建一个连接，完成 之后立即断开连接（HTTP协议为无连接的协议）；
+
+当使用Keep-Alive模式（又称持久连接、连接重用）时，Keep-Alive功能使客户端到服 务器端的连接持续有效，当出现对服务器的后继请求时，Keep-Alive功能避免了建立或者重新建立连接。
+
+### 为什么要使用keep-alive
+
+keep-alive技术的创建目的，能在多次HTTP之前重用同一个TCP连接，从而减少创建/关闭多个 TCP 连接的开销（包括响应时间、CPU 资源、减少拥堵等），参考如下示意图
+
+### 开启方式
+
+```http
+// HTTP/1.1 默认开启
+Connection: close
+//HTTP/1.0 手动开启
+Connection: keep-alive
+```
+
+## 全览
+
+![ ](img/http%E5%85%A8%E8%A7%88.png)
