--- a/js/02-事件.md
+++ b/js/02-事件.md
@@ -36,7 +36,7 @@
 - 先执行同步任务: `for循环\while\new Promise\闭包\console.log()`
 - 再执行异步任务
   - 先执行宏任务: `setTimeout\setInterval\setImmediate\I/O(Ajax)\UI render`
-  - 再执行微任务: `process.nextTick\Promise\promise.then\MutationObserver\Promise.resolve().then`
+  - 再执行微任务: `process.nextTick\Promise\promise.then\MutationObserver\Promise.resolve().then()`
 - 在执行任何一个宏任务之前(不是队列，是一个宏任务)，都会先查看微任务队列中是否有任务需要执行
 
 ### node中的执行顺序
