--- a/全栈/安全.md
+++ b/全栈/安全.md
@@ -85,12 +85,12 @@ CREATE TABLE ids_increment (
 
 ### 跨域解决方案 [juejin](https://juejin.cn/post/6844903767226351623)
 
-- [JSONP](https://zh.wikipedia.org/wiki/JSONP) (JSON with Padding)
+- *[JSONP](https://zh.wikipedia.org/wiki/JSONP) (JSON with Padding)
   - script标签没有同源限制
   - 服务器返回页面上callback包裹的json数据
   - 兼容性好
   - 仅支持GET
-- CORS (Cross-origin-resource-sharing)跨域资源共享
+- *CORS (Cross-origin-resource-sharing)跨域资源共享
   - 简单请求，需满足以下两个条件：
     - GET HEAD POST
     - Content-Type
@@ -99,13 +99,13 @@ CREATE TABLE ids_increment (
       - application/x-www-form-urlencoded
   - 复杂请求：不满足以上条件
     - 复杂请求的CORS请求，会在正式通信之前，增加一次HTTP查询请求，称为"预检"请求,该请求是 option 方法的，通过该请求来知道服务端是否允许跨域请求。
-- postMessage
+- *[postMessage](https://developer.mozilla.org/zh-CN/docs/Web/API/Window/postMessage)
   - window属性
   - 跨窗口，跨框架iframe、frame，跨域
   - 允许不同源脚本采用异步方式进行通信
-- document.domain
+- *document.domain
   - 主域名相同，子域名不同
-  - 设置值为主域名
+  - 设置值为主域名 document.domain = 'test.com'
 - window.name
   - 不超过 2MB
     - 同一个iframe
