--- a/全栈/安全.md
+++ b/全栈/安全.md
@@ -137,7 +137,7 @@ CREATE TABLE ids_increment (
   - 局限性（以下场景失效）：
     - 禁用JS
     - 在恶意页面监听onbeforeunload事件，当用户点击否，停止退出
-    - 设置iframe的sandbox属性，将iframe沙箱话，不添加allow-top-navigation，禁止其更改top.location, IE10+兼容
+    - 设置iframe的sandbox属性，将iframe沙箱化，不添加allow-top-navigation，禁止其更改top.location, IE10+兼容
 - X-frame-Options
   - 原理：禁止页面被嵌套，或者设置页面嵌套的策略
   - 局限性（以下场景失效）
@@ -154,7 +154,7 @@ CREATE TABLE ids_increment (
   - 局限性：
     - 禁用js
     - 影响SEO，可能会被认为故意遮盖主体，作弊
-    - 山一千套也会被拦截
+    - 善意嵌套也会被拦截
 
 ## 如何提高 iframe 嵌入内容的安全性 ？
 
@@ -354,8 +354,8 @@ CREATE TABLE ids_increment (
     - 推荐将所有远程代码（JS / Webassembly / CSS） 下载到本地使用
   - 使用黑白名单渲染
     - 根据上下文，只渲染需要的标签和属性，过滤危险标签和属性，转义需要但存在风险的标签和属性。例如，前后端都是 JavaScript 可以通过 js-xss 库实现
-- 鉴权
-  - 限制Cokkie访问
+- 3. 鉴权
+  - 限制Cookie访问
     - 设置 Secure 属性，声明 Cookie 只能通过 HTTPS 协议传输，依然有可能通过访问客户端硬盘读取
     - 设置 HttpOnly 属性，声明 Cookie 只对服务端会话可用，无法通过Document.cookie 访问，有助于缓解依赖此接口的 XSS 的攻击
     - 设置 SameSite 属性
@@ -378,7 +378,7 @@ CREATE TABLE ids_increment (
       - token 校验的必要补充，在 token 校验失败时，避免影响用户，要求其验证
         - 一般操作，验证通过，在一定时间，一定次数内，不再重复验证
         - 敏感数据，风险操作，一个请求，一次验证
-- 业务侧
+- 4. 业务侧
   - 开发者
     - 建立网址安全云库或使用第三方的 API，禁止用户访问仿冒、钓鱼、恶意网站，对未知安全的网址提示用户不要输入敏感信息
     - 建立内容安全监控平台，深度学习大数据，定义参数，预测热门内容传播模型。对不符合传播规律，短期内异常传播的内容进行二次审查，减少 XSS 蠕虫、钓鱼的内容传播
