--- a/算法/算法.md
+++ b/算法/算法.md
@@ -2,26 +2,13 @@
 
 [toc]
 
-## 什么是原码、反码、补码？
+## 常见算法复杂度
 
-## 位运算求绝对值？
-
-## 去除数组中的指定元素
-
-## 数组去重方法
-
-## 判断一个对象是不是数组 Array
-
-## 移动零
-
-## 空间复杂度为 O(1) 的中序遍历（莫里斯）遍历
-
-## 求最大公约数
-
-## 插入排序
-
-## 快速排序
-
-## 归并排序
-
-## 冒泡排序
+- 常数阶O(1)
+- 对数阶O(logN)
+- 线性阶O(n)
+- 线性对数阶O(nlogN)
+- 平方阶O(n^2)
+- 立方阶O(n^3)
+- !K次方阶O(n^k)
+- 指数阶O(2^n)
