--- a/复习-慕课/前端知识体系.md
+++ b/复习-慕课/前端知识体系.md
@@ -81,3 +81,110 @@
 
 - 写数值或者比例直接继承数值或者比例
 - 写百分比，则继承计算出来的值
+
+### 相应式
+
+单位
+
+- px
+- em 相对父元素长度单位
+- rem 相对**根元素**的长度单位
+  - 弊端：阶梯性
+- vw/vh 网页适口宽度及高度的1/100
+  - vmax/min两者中的最大值和最小值
+
+```css
+/* html */
+font-size: 100px;
+```
+
+[rem](06-%E5%AA%92%E4%BD%93%E6%9F%A5%E8%AF%A2.html)
+
+screenHeight 屏幕高度
+innerHeight 网页视口
+clientHeight 元素高度
+
+## JS基础
+
+### 变量类型和计算
+
+值类型和引用类型
+
+typeof
+
+class
+
+instanceof
+
+### 原型和原型链
+
+### 作用域闭包this
+
+const/let的块级作用域
+
+闭包自由变量的查找是在函数定义的地方向上查找变量不是执行的地方
+
+闭包的应用
+
+- 隐藏数据
+
+  ```js
+  // 隐藏数据，只展示API
+  function creatCache(){
+    const cache = {}
+    return {
+      set(key, value){
+        cache[key] = value
+      },
+      get(key){
+        return cache[key]
+      }
+    }
+  }
+  const cache = creatCache()
+  cache.set('name','key')
+  cache.get('name')
+  ```
+
+this是在函数执行的时候进行绑定的
+
+### 异步
+
+Promise解决的问题
+
+- callback hell
+
+异步的应用场景
+
+- 网络请求
+- 定时操作
+
+## JS Web API
+
+DOM 树结构
+
+property 和 attribute的区别
+
+- property：改变对象属性，不会体现在html结构中
+- attribute：修改html属性，会改变html结构
+- 两者都可能引起DOM重新渲染
+
+DOM 操作
+
+- NodeList
+- HTMLCollection
+
+DOM性能优化
+
+- 缓存查询
+- 将频繁操作改为一次性操作
+
+BOM操作
+
+## 事件
+
+- addEventListener
+
+## Ajax
+
+手写
