--- a/复习-慕课/前端知识体系.md
+++ b/复习-慕课/前端知识体系.md
@@ -187,4 +187,76 @@ BOM操作
 
 ## Ajax
 
-手写
+手写 ajax
+
+跨域
+
+- jsonp
+- cors
+
+## 存储
+
+- cookie
+- localStorage
+- sessionStorage
+  
+## http
+
+常见状态码
+
+- 200 成功
+- 301 永久重定向
+- 302 临时重定向
+- 304 资源未被修改
+- 404 资源未找到
+- 403 没有权限
+- 500 服务器错误
+- 504 网关超时
+
+请求方式 methods
+
+- get 请求数据
+- post 添加数据
+- patch/put 更新数据
+- delete 删除数据
+
+Restful API
+
+- 一种新的RestfulAPI设计方式
+- 传统API设计：把每个url当做一个功能
+- RestfulAPI设计：把每个url当做唯一的资源
+
+http headers
+
+缓存
+
+## git
+
+- git add .
+- git checkout xxx
+- git branch
+- git checkout -b xxx
+- git merge
+
+## webpack
+
+## babel
+
+## linux命令
+
+- ls -a
+- mkdir [ dir name ]
+- rm -rf [ dir name ] 删文件夹
+- mv [ oldName ] [ newName ] 移动/重命名
+- cp [ old ]  [ new ]拷贝
+- re xxx.js 删除文件
+- grep 关键字 文件名
+- cat 文件名 显示全部
+- head 文件名 显示前几行
+- tail 文件名 显示后几行
+
+vim编辑器
+
+## 性能优化
+
+## 安全
