--- a/复习-慕课/前端知识体系.md
+++ b/复习-慕课/前端知识体系.md
@@ -260,3 +260,21 @@ vim编辑器
 ## 性能优化
 
 ## 安全
+
+## 数组纯函数方法
+
+- map
+- filter
+- concat
+- slice
+
+## 正则表达式
+
+正则表达式规则
+
+常见正则表达式
+
+## 错误捕获
+
+- trycatch
+- window.onerror
