选择器&盒模型&布局

--- a/CSS/2-单位及盒模型.md
+++ b/CSS/2-单位及盒模型.md
@@ -2,7 +2,7 @@
 
 [toc]
 
-## CSS中有哪些单位
+## CSS中有哪些[单位](https://developer.mozilla.org/zh-CN/docs/Learn/CSS/Building_blocks/Values_and_units)
 
 - 绝对长度单位
 
@@ -21,7 +21,7 @@
   |:---:|:---:|:---:|
   |em|font-size:相对于父元素width等；相对于自身的font-size|自适应布局|
   |rem|相对于分元素的字体大小|移动端|
-  |vw|视窗宽度1%||
+  |vw|视窗宽度1%|宽度自适应|
   |vh|视窗高度1%|高度自适应|
 
   此外，浏览器还支持ex ch lh vmin vmax
@@ -56,8 +56,8 @@
 - RGB color model
   - 十六进制RGB：#ffffff简写#fff
   - 十六进制RGBA：#fffffff简写为#ffff
-  - 函数rgb（）：rgb(255,255,255)
-  - 函数rgba（）：rgba(255，255，255，1)
+  - 函数rgb()：rgb(255,255,255)
+  - 函数rgba()：rgba(255，255，255，1)
 - HSL color model
   - 函数hsl():hsl(0,0%,100%)
   - 函数hsla():hsla(0,0%,100%,1)
@@ -71,11 +71,11 @@
 
 分为两类：
 
-- 标准盒模型：`box-sizing:content-box`
+- 标准盒模型：`box-sizing: content-box`
 
   `width` 和 `height` 设置内容 `content` 的宽和高
 
-- 替代盒模型：`box-sizing:border-box`
+- 替代盒模型：`box-sizing: border-box`
 
   `width` 和 `height` 设置内容 `content` + 内边距 `padding` + 边框 `border` 的宽和高
 
