--- a/CSS/3-布局.md
+++ b/CSS/3-布局.md
@@ -28,151 +28,15 @@
 - 子元素成为弹性盒子，宽度、高度、外边距可以弹性变化，自适应父元素的尺寸
 - 子元素可以在垂直、水平方向上，正向或反向排列
 - 父元素通过[justify-content](https://developer.mozilla.org/zh-CN/docs/Web/CSS/justify-content)决定子元素在主轴的对齐方式
-
-  ```css
-  /* Positional alignment */
-  justify-content: center;     /*居中排列*/
-  justify-content: start;      /*Pack items from the start*/
-  justify-content: end;        /*Pack items from the end*/
-  justify-content: flex-start; /*从行首起始位置开始排列*/
-  justify-content: flex-end;   /*从行尾位置开始排列*/
-  justify-content: left;       /*Pack items from the left*/
-  justify-content: right;      /*Pack items from the right*/
-
-  /*Baseline alignment*/
-  justify-content: baseline;
-  justify-content: first baseline;
-  justify-content: last baseline;
-
-  /*Distributed alignment*/
-  justify-content: space-between;  /*均匀排列每个元素
-  首个元素放置于起点，末尾元素放置于终点*/
-  justify-content: space-around;  /*均匀排列每个元素
-  每个元素周围分配相同的空间*/
-  justify-content: space-evenly;  /*均匀排列每个元素
-  每个元素之间的间隔相等*/
-  justify-content: stretch;       /*均匀排列每个元素
-  'auto'-sized 的元素会被拉伸以适应容器的大小*/
-
-  /*Overflow alignment*/
-  justify-content: safe center;
-  justify-content: unsafe center;
-
-  /*Global values*/
-  justify-content: inherit;
-  justify-content: initial;
-  justify-content: unset;
-  ```
-
 - 父元素通过[align-items](https://developer.mozilla.org/zh-CN/docs/Web/CSS/align-items)决定子元素在交叉轴的对齐方式
-
-  ```css
-  /* Basic keywords */
-
-  align-items: normal;
-  align-items: stretch;
-
-  /*Positional alignment*/
-  align-items: center; /*Pack items around the center*/
-  align-items: start; /*Pack items from the start*/
-  align-items: end; /*Pack items from the end*/
-  align-items: flex-start; /*Pack flex items from the start*/
-  align-items: flex-end; /*Pack flex items from the end*/
-  align-items: self-start;
-  align-items: self-end;
-
-  /*Baseline alignment*/
-  align-items: baseline;
-  align-items: first baseline;
-  align-items: last baseline; /*Overflow alignment (for positional alignment only)*/
-  align-items: safe center;
-  align-items: unsafe center;
-
-  /*Global values*/
-  align-items: inherit;
-  align-items: initial;
-  align-items: unset;
-  ```
-
 - 父元素通过[align-content](https://developer.mozilla.org/zh-CN/docs/Web/CSS/align-content)决定多行子元素整体在交叉轴的对齐方式
-
-  ```css
-  /* 基本位置对齐 */
-  /*align-content不采用左右值*/
-  align-content: center;     /*将项目放置在中点*/
-  align-content: start;      /*最先放置项目*/
-  align-content: end;        /*最后放置项目*/
-  align-content: flex-start; /*从起始点开始放置flex元素*/
-  align-content: flex-end;   /*从终止点开始放置flex元素*/
-
-  /*默认对齐*/
-  align-content: normal;
-
-  /*基线对齐*/
-  align-content: baseline;
-  align-content: first baseline;
-  align-content: last baseline;
-
-  /*分布式对齐*/
-  align-content: space-between; /*均匀分布项目,第一项与起始点齐平，最后一项与终止点齐平*/
-  align-content: space-around;  /*均匀分布项目,项目在两端有一半大小的空*/
-  align-content: space-evenly;  /*均匀分布项目,项目周围有相等的空间*/
-  align-content: stretch;       /*均匀分布项目,拉伸‘自动’-大小的项目以充满容器*/
-
-  /*溢出对齐*/
-  align-content: safe center;
-  align-content: unsafe center;
-
-  /*全局属性*/
-  align-content: inherit; /*继承*/
-  align-content: initial;  /*初始值*/
-  align-content: unset; /*未设置*/
-  ```
-
 - 子元素通过[align-self](https://developer.mozilla.org/zh-CN/docs/Web/CSS/align-self)决定自身在交叉轴的对齐方式
-
-  ```css
-  /* Keyword values */
-  align-self: auto;
-  align-self: normal;
-  
-  /* Positional alignment */
-  /* align-self does not take left and right values */
-  align-self: center; /* Put the item around the center */
-  align-self: start;  /* Put the item at the start */
-  align-self: end;    /* Put the item at the end */
-  align-self: self-start; /* Align the item flush at the start */
-  align-self: self-end;   /* Align the item flush at the end */
-  align-self: flex-start; /* Put the flex item at the start */
-  align-self: flex-end;   /* Put the flex item at the end */
-  
-  /* Baseline alignment */
-  align-self: baseline;
-  align-self: first baseline;
-  align-self: last baseline;
-  align-self: stretch; /* Stretch 'auto'-sized items to fit the container */
-  
-  /* Overflow alignment */
-  align-self: safe center;
-  align-self: unsafe center;
-  
-  /* Global values */
-  align-self: inherit;
-  align-self: initial;
-  align-self: unset;
-  ```
 
 ## 什么是外边距折叠，如何避免？
 
-上下相邻盒子的外边距没有累加而是重叠取其中的较大值，称之为外边距折叠
+- 上下相邻盒子的外边距没有累加而是重叠取其中的较大值，称之为外边距折叠
 
-- 上下相邻块盒子的间距 = 上盒子下边距和下盒子上边距的最大值
-  
-  将其中一个盒转换为内联块盒子
-
-- 空块盒子，上边距<=上榜盒子下边距，下边距<>=下盒子上边距，相当于不存在
-
-  解决方法：增加内容，直接写入或使用伪元素
+解决方法：增加内容，直接写入或使用伪元素
 
   ```css
   div:first-of-type {
@@ -232,7 +96,7 @@
   - 设置边框
   - 设置内边距
   - 增加内容，直接写入或使用伪元素
-  - 触发BFC的方法都可以
+  - 其他触发BFC的方法都可以
 
 ## 什么是块级格式上下文？
 
@@ -261,7 +125,7 @@
 - 多列容器（元素的 column-count 或 column-width (en-US) 不为 auto，包括 column-count 为 1）
 - column-span 为 all 的元素始终会创建一个新的BFC，即使该元素没有包裹在一个多列容器中（标准变更，Chrome bug）
 
-用途：清除浮动；解决外边框折叠；限定布局范围提高渲染性能
+用途：*清除浮动；解决外边框折叠；限定布局范围提高渲染性能*
 
 ## 有哪些定位方式？
 
@@ -310,7 +174,7 @@ position不为static时，可以通过top right bottom left设置元素位置偏
 - 文档根元素（`<html>`）；
 - position 值为 absolute（绝对定位）或  relative（相对定位）且 z-index 值不为 auto 的元素；
 - position 值为 fixed（固定定位）或 sticky（粘滞定位）的元素（沾滞定位适配所有移动设备上的浏览器，但老的桌面浏览器不支持）；
-- flex (flexbox (en-US)) 容器的子元素，且 z-index 值不为 auto；
+- flex (flexbox) 容器的子元素，且 z-index 值不为 auto；
 - grid (grid) 容器的子元素，且 z-index 值不为 auto；
 - opacity 属性值小于 1 的元素（参见 the specification for opacity）；
 - [mix-blend-mode](https://developer.mozilla.org/zh-CN/docs/Web/CSS/mix-blend-mode) 属性值不为 normal 的元素；
@@ -425,14 +289,10 @@ position不为static时，可以通过top right bottom left设置元素位置偏
 ## 多方法实现水平居中
 
 - `text-align:center`适合内联或者内联块元素的父元素设置
-- `position:static`
-  - `margin:0 auto`适合宽度已知的元素
-    - 块元素`display:block`宽度固定`width:100px`
-    - 块元素`display:block`宽度自适应`width:fit-content`
-    - 表格元素`display:table`
-- `position:relative`/`position:absolute`/`position:fixed`/`position:sticky`脱离文档流后
+- `margin:0 auto`适合宽度已知的元素
+- `position:absolute`/`position:fixed`/`position:sticky`脱离文档流后
   - 偏移`left:50%`或者`right:50%`
-    - `margin-left`或`margin-right`设置宽度一半
+    - `margin-left`或`margin-right`设置负宽度一半
     - `transform: translateX(-50%)`
   - 偏移`left:0`和`right:0`
     - 宽度固定`width:100px`或自适应`width:fit-content`
@@ -442,31 +302,22 @@ position不为static时，可以通过top right bottom left设置元素位置偏
 
 ## 多方法实现垂直居中
 
-- 内联父元素
-  - `line-height:100px`
-- 内联块或者块元素
+- 内联元素
   - `line-height`等于元素`height`
-  - `padding-top`等于`padding-bottom`
-- 内联或内联块元素
-  - `vertical-align: middle`元素与行的基线+字母x的高度的一半对齐
+
 - 表格单元格元素：`display:table-cell`或者`<td>`
   - `vertical-align: middle`内容或子元素垂直居中
-- `position:static`
-  - margin-top: 50%适合宽度已知元素transform: translateY(-50%)
-    - 块元素display:block高度固定height:100px
-    - 块元素display:block宽度自适应内容height:fit-content
-    - 表格元素display:table
-- `position:relative/position:absolute/position:fixed/position:sticky`脱离文档流后
+
+- `position:absolute/position:fixed/position:sticky`脱离文档流后
   - 偏移top:50%或者bottom:50%
     - margin-top或margin-bottom设置高度一半
     - transform: translateY(-50%)
   - 偏移top:0和bottom:0
     - 宽度固定height:100px或自适应height:fit-content
     - margin: auto 0
+
 - `display:flex`父元素
-  - align-content: center多行内部元素整体沿交叉轴居中排列
   - align-items: center每行内部元素整体沿交叉轴居中排列
-  - align-self: center单个内部元素沿交叉轴居中排列
 
 ## 多方法实现高度 100% 撑满视窗
 
