--- a/js/复习/01-ES5.md
+++ b/js/复习/01-ES5.md
@@ -99,6 +99,13 @@ if(a==1 && a==2 && a==3) console.log('true')
 - get属性被定义在实例原型
 - Object.defineProperty属性被定义在实例自身
 
+||configurable|enumerable|value|writable|get|set|
+|:--:|:--:|:--:|:--:|:--:|:--:|:--:|
+|数据描述符|可以|可以|可以|可以|不可以|不可以|
+|存取描述符|可以|可以|不可以|不可以|可以|可以|
+
+以上默认值为`false`或者`undefined`
+
 例如：
 
 ```js
@@ -114,7 +121,7 @@ class TestGet {
 }
 
 let t = new TestGet("test name");
-console.log("t: ", t);
+console.log("t: ", t); // {#name,"alskdjf"}
 console.log("t: ", t.hasOwnProperty("name")); // false
 console.log("t.__proto__.name: ", t.__proto__.name); // alskdjf
 
