--- a/js/复习/02-事件.md
+++ b/js/复习/02-事件.md
@@ -29,22 +29,27 @@
 
 参见课件 [juejin1](https://juejin.cn/post/6844904149700575239) [juejin2](https://juejin.cn/post/7001881781125251086)
 
-事件循环，指浏览器或者Node用来执行JS单线程运行运行阻塞问题的一种机制
+事件循环，指浏览器或者Node用来执行JS单线程运行阻塞问题的一种机制
 
 ### 浏览器中执行顺序
 
 - 先执行同步任务: `for循环\while\new Promise\闭包\console.log()`
 - 再执行异步任务
-  - 先执行宏任务: `setTimeout\setInterval\setImmediate\I/O(Ajax)\UI render`
   - 再执行微任务: `process.nextTick\Promise\promise.then\MutationObserver\Promise.resolve().then()`
+  - 先执行宏任务: `setTimeout\setInterval\setImmediate\I/O(Ajax)\UI render`
 - 在执行任何一个宏任务之前(不是队列，是一个宏任务)，都会先查看微任务队列中是否有任务需要执行
 
 ### node中的执行顺序
 
-看课件后继续完善
+- next tick microtask queue: `process.nextTick`
+- other microtask queue: `Promise.then()` `queueMicroTask()`
+- timer queue: `setTimeout()` `setTimeInterval()`
+- poll queue: `IO事件`
+- pcheck queue: `setImmediate()`
+- pclose queue: `close事件`
 
 ## 为什么Vue.$nextTick通常比setTimeout优先级高，渲染更快生效？
 
-nextTick 在 Vue 源码中是利用 Promise.resolve()实现的
+nextTick 在 Vue 源码中是利用 Promise.resolve().then()实现的
 
-根据执行顺序：Promise创建微任务，添加到当前宏任务微任务队列。队列任务执行完，如需渲染，即可渲染页面；setTimeout 创建宏任务，如果此时正在执行微任务队列，需要等队列执行完，渲染一次后，重新开始 Event Loop，执行宏任务中的异步代码后再渲染
+根据执行顺序：Promise创建微任务，添加到当前微任务队列。队列任务执行完，如需渲染，即可渲染页面；setTimeout 创建宏任务，如果此时正在执行微任务队列，需要等队列执行完，渲染一次后，重新开始 Event Loop，执行宏任务中的异步代码后再渲染
