--- a/js/复习/03-ES6.md
+++ b/js/复习/03-ES6.md
@@ -13,15 +13,15 @@
   - var 生命的变量保存在window中，let/const声明的变量保存在variables_中
   - 块级作用域
     - let/const 声明的变量在块级作用域中有效
-    - const 声明的变量在块级作用域中无效
+    - var 声明的变量在块级作用域中无效
     - for 循环也有块级作用域
       - for 循环使用 let
       - for...of 使用 const
-  - 使用优先级 const=>let=>var
+  - 使用优先级 const>let>var
 - Promise
-- Class
+- class
 - 箭头函数
-  - 箭头函数是没有显式原型的(能通过new调用)
+  - 箭头函数是没有显式原型的(不能通过new调用)
   - 不绑定this
   - 没有arguments
 - 函数参数默认值
@@ -47,7 +47,7 @@
 - [模板字符串](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Template_literals)
   - 标签模版字符串(react中css编写)
     - 第一个参数依然是模版字符串中的整个字符串，只不过被切成多块放入一个数组中
-    - 斯二个参数是模板字符串中第一个`${}`
+    - 第二个参数是模板字符串中第一个`${}`
 - 解构语法
   - 数组解构: 按照索引依次复制
     - `const [item1, item2] = [1, 2]`
@@ -77,13 +77,14 @@
   - 十六进制 0x100 => 256
 - Symbol
   - ES6之后，对象属性名可以是一个字符串，也可以是一个Symbol类型
-  - `const s2 = Symbol()` `obj[s2] = 'value'` `Object.defineProperty()`
+  - `const s2 = Symbol()` `obj[s2] = 'value'` `Object.defineProperty(obj, s2, {})`
   - `Object.key()`获取不到Symbol值
-  - `Object.getOwnPropertySymbol()` `Object.getOwnPropertiesSymbol()`
-  - `Symbol.for(description)` `Symbol.keyFor()`
+  - `Object.getOwnPropertySymbol()` `Object.getOwnPropertiesSymbol()` 获取Symbol属性值
+  - `Symbol.for(description)` 根据给定的键 key，来从运行时的 symbol 注册表中找到对应的 symbol，如果找到了，则返回它，否则，新建一个与该键关联的 symbol，并放入全局 symbol 注册表中。
+  - `Symbol.keyFor()` 获取全局 symbol 注册表中与某个 symbol 关联的键
 - Set 集合中的数据不重复 **强引用**
-  - 创建`const set = new Set()`
-  - 属性size
+  - 创建 `const set = new Set()`
+  - 属性 `size`
   - 方法
     - `set.add(value)`
     - `set.delete(value)`
@@ -97,17 +98,17 @@
   - 方法
     - add has delete 不能进行遍历
   - 应用场景
-    - 见课件
+    - 见课件(react中进行使用)
 - Map 可以使用对象作为属性值
   - 构造方法创建new Map([entries])
   - 属性size
   - 方法：
-    - set
-    - delete
-    - has
-    - get
-    - clear
-    - forEach for...of...遍历
+    - `set`
+    - `delete`
+    - `has`
+    - `get`
+    - `clear`
+    - `forEach` `for...of...`遍历
 - WeakSet 属性值是对象 弱引用
   - 没有size属性
   - 不能遍历，没有clear方法
@@ -118,13 +119,15 @@
 - [arr.includes(valueToFind, [fromIndex])](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Array/includes)
   - 另一种方法`indexOf` 不包含的话返回-1
   - `indexOf`不能判断`NaN`, `includes` 可以
-- 指数操作符**
-  - Math.pow(3, 3) === 3 ** 3
+- 指数操作符 `**`
+  - `Math.pow(3, 3) === 3 ** 3`
 
 ### ES8
 
 - async、await
-- [OBject.values()](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Object/values)
+- [Object.values()](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Object/values)
+  - 返回所有可枚举属性值的数组
+- `Object.keys()` 返回所有可枚举属性数组
 - [Object.entries()](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Object/entries)
   - 传入一个对象，获取entries数组`[[key, value], []...]`
 - [Object.hasOwnPropertyDescriptors()](https://zh.javascript.info/property-descriptors)
@@ -132,7 +135,6 @@
   - 应用：填充身份证号前几位星号
 - SharedArrayBuffer 和 [Atomics](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Atomics)，共享内存位置读取和写入
 - 函数最后参数有尾逗号，与数组和对象保持一致
-- `Object.value()` `Object.keys()`
 
 ### ES9
 
@@ -182,11 +184,11 @@
 - JSON.stringify()
   - \ud800到 \udfff 单独转换，返回转义字符串
   - \ud800到 \udfff 成对转换，对应字符存在，返回字符。不存在，返回转义字符串
-- `arr.flat([depth])` 和 flatMap
+- `arr.flat([depth])` 和 `flatMap`
   - 数组降维 数组先映射再降维
 - `str.trimStart()` 和 `str.trimEnd()` 去除首尾空格
-- Object.fromEntries() 传入键值对列表，返回键值对对象
-- 应用：URL查询字符串转对象
+- `Object.fromEntries()` 传入键值对列表，返回键值对对象
+  - 应用：URL查询字符串转对象
 - `Symbol.prototype.description(symbol)`
 
   ```js
@@ -216,7 +218,7 @@
 
 ### ES12
 
-- String.prototype.replaceAll(old,new)
+- `String.prototype.replaceAll(old,new)`
 - [FinalizationRegister(callback)](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/FinalizationRegistry)
 - WeakRefs
   - `WeakRef.prototype.deref()`如果元对象没有消失获取原对象
@@ -230,15 +232,15 @@
 
 ## == === Object.is()的区别
 
-- == 相等，如果两边类型不一致，进行隐式转换后，再比较。+0 和 -0 相等， NaN 不等于任何数
-- === 严格相等，如果类型不一致，就不相等。 +0 和 -0 相等， NaN 不等于任何数
-- Object.is() 严格相等，+0 和 -0 不相等， NaN 等于自身
+- `==` 相等，如果两边类型不一致，进行隐式转换后，再比较。+0 和 -0 相等， NaN 不等于任何数
+- `===` 严格相等，如果类型不一致，就不相等。 +0 和 -0 相等， NaN 不等于任何数
+- `Object.is()` 严格相等，+0 和 -0 不相等， NaN 等于自身
 
 ## a = [], a.push(...[1,2,3]), a = ?
 
 考察点
 
-- [push](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Array/push), 支持将一个或者多个元素添加到数组末尾, 并返回该数组的新长度。
+- [push](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Array/push), 支持将*一个或者多个*元素添加到数组末尾, 并返回该数组的新长度。
 - apply
   - 第一参数：指定 push 执行时的 this，即正在调用 push 的对象为数组 a
   - 第二参数：传入数组或类数组对象作为参数数组，展开作为 push 的参数列表
