--- a/js/复习/04-变量.md
+++ b/js/复习/04-变量.md
@@ -15,11 +15,35 @@
 - HTML Collections
 - 字符串
 - arguments
-- $返回的jquery原型对象
 
 ### 类数组对象转数组
 
 - 新建数组，遍历类数组对象，将每个元素放入数组
-- Array.prototype.slice.call(Arraylike)或者[].slice.call(Arraylike)
+
+  ```js
+  const str = "12345"
+  const arr = []
+  for (let index = 0; index < 5; index++) {
+      const s = str[index]
+      arr.push(s)
+  }
+  console.log(arr) // ['1', '2', '3', '4', '5']
+  ```
+
+- `Array.prototype.slice.call(Arraylike)或者[].slice.call(Arraylike)
+
+  ```js
+  Array.prototype.slice.call(str) // ['1', '2', '3', '4', '5']
+  ```
+
 - Array.from(Arraylike)
+
+  ```js
+  Array.from(str) // ['1', '2', '3', '4', '5']
+  ```
+
 - apply第二个参数传进去，调用数组方法 `Array.prototype.push.apply([], ArrayLike)`
+
+  ```js
+  Array.prototype.push.apply([],str)
+  ```
