--- a/js/复习/06-原型链.md
+++ b/js/复习/06-原型链.md
@@ -4,23 +4,21 @@
 
 ## [对比各种继承？](https://juejin.cn/post/6844904161071333384#comment)
 
-### 原型链继承
+### 借助原型链实现继承
 
 子类原型指向父类实例
 
 ```js
 function Parent() {
-    this.name = 'zhangsan';
-    this.children = ['A', 'B'];
+  this.name = 'zhangsan';
+  this.children = ['A', 'B'];
 }
 
 Parent.prototype.getChildren = function() {
-    console.log(this.children);
+  console.log(this.children);
 }
 
-function Child() {
-
-}
+function Child() { }
 
 Child.prototype = new Parent();
 
@@ -43,26 +41,26 @@ console.log(child2.getChildren()); // Array ["A", "B", "child1", "child2"]
 - 创建实例不能传递参数
 - 引用类型的属性被所有实例共享
 
-### 借用构造函数继承
+### 组合借用构造函数实现继承
 
 在子类型构造函数的内部调用父类型构造函数
 
 ```js
 function Parent(age) {
-    this.names = ['lucy', 'dom'];
-    this.age = age;
+  this.names = ['lucy', 'dom'];
+  this.age = age;
 
-    this.getName = function() {
-        return this.name;
-    }
+  this.getName = function() {
+    return this.name;
+  }
 
-    this.getAge = function() {
-        return this.age;
-    }
+  this.getAge = function() {
+    return this.age;
+  }
 }
 
 function Child(age) {
-    Parent.call(this, age);
+  Parent.call(this, age);
 }
 
 var child1 = new Child(18);
@@ -85,29 +83,28 @@ console.log(child2.names); // [ 'lucy', 'dom', 'child2' ]
 - 实例并不是父类的实例（重复创建对象）
 - 不能继承父类原型上的方法，无法实现方法的复用
 
-### 组合继承
+### 组合借用构造函数实现继承
 
 ```js
 function Parent(name, age) {
-    this.name = name;
-    this.age = age;
-    this.colors = ['red', 'green']
-    console.log('parent')
+  this.name = name;
+  this.age = age;
+  this.colors = ['red', 'green']
 }
 
 Parent.prototype.getColors = function() {
-    console.log(this.colors);
+  console.log(this.colors);
 }
 
 function Child(name, age, grade) {
-    Parent.call(this, name, age);// 创建子类实例时会执行一次
-    this.grade = grade;
+  Parent.call(this, name, age);// 创建子类实例时会执行一次
+  this.grade = grade;
 }
 
 Child.prototype = new Parent(); // 指定子类原型会执行一次
-Child.prototype.constructor = Child;// 校正构造函数
+Child.prototype.constructor = Child; // 校正构造函数
 Child.prototype.getName = function() {
-    console.log(this.name)
+  console.log(this.name)
 }
 
 var c = new Child('alice', 10, 4)
@@ -127,7 +124,7 @@ console.log(c.getName())
 
 - 创建子类时会调用两次超类的构造函数
 
-### 原型式继承
+### 原型式继承函数
 
 这种方法并没有使用严格意义上的构造函数，思想是借助原型可以基于已有的对象创建新对象，同时还不必因此创建自定义类型。
 
@@ -137,6 +134,12 @@ function object(o) {
   F.prototype = o;
   return new F();
 }
+
+// function object(obj){
+//   const newObj = {}
+//   Object.setPrototypeOf(newObj, obj)
+//   return newObj
+// }
 ```
 
 ```js
@@ -166,6 +169,17 @@ console.log(person.friends)
 
 ### 寄生继承
 
+```js
+  const parent = { name: 'lee' }
+  function createChild(parent){
+    const newObj = Object.create(parent)
+    newObj.num = '001'
+    return newObj
+  }
+  createChild(parent)
+  console.log(createChild(parent).name); // lee
+```
+
 好处：
 
 - 可以增强对象
@@ -177,11 +191,23 @@ console.log(person.friends)
 
 ### 寄生组合继承
 
+```js
+function object(o) {
+  function Func() {}
+  Func.prototype = o;
+  return new Func();
+}
+function inheritPrototype(subType, superType) {
+  subType.prototype = object(superType.prototype);
+  subType.prototype.constructor = subType;
+}
+```
+
 复制了超类原型的副本，而不必调用超类构造函数；既能够实现函数复用，又能避免引用类型实例被子类共享，同时创建子类只需要调用一次超类构造函数
 
 ### ES6继承
 
-寄生组合继承的语法糖
+寄生组合继承的语法糖 
 
 ## 什么是原型链
 
