--- a/js/复习/06-原型链.md
+++ b/js/复习/06-原型链.md
@@ -41,7 +41,7 @@ console.log(child2.getChildren()); // Array ["A", "B", "child1", "child2"]
 - 创建实例不能传递参数
 - 引用类型的属性被所有实例共享
 
-### 组合借用构造函数实现继承
+### 借用构造函数实现继承
 
 在子类型构造函数的内部调用父类型构造函数
 
@@ -83,7 +83,7 @@ console.log(child2.names); // [ 'lucy', 'dom', 'child2' ]
 - 实例并不是父类的实例（重复创建对象）
 - 不能继承父类原型上的方法，无法实现方法的复用
 
-### 组合借用构造函数实现继承
+### 组合借用构造函数实现继承(组合继承)
 
 ```js
 function Parent(name, age) {
@@ -122,7 +122,8 @@ console.log(c.getName())
 
 坏处：
 
-- 创建子类时会调用两次超类的构造函数
+- 创建子类时会调用两次父类的构造函数
+- 子类实例及子类原型上都存在同一属性，尽管按照原型链的机制并不会放问到原型链上面的属性，但这种方法终归是不完美的
 
 ### 原型式继承函数
 
@@ -162,12 +163,14 @@ console.log(person.friends)
 > Array ["leyla", "court", "van", "p1", "p2"]
 ```
 
-优缺点：
+缺点：
 
 - 只能实现对象的继承
 - 引用类型的属性会被所有实例
 
 ### 寄生继承
+
+创建一个仅用于封装继承过程的函数，该函数在内部以某种形式来做增强对象，最后返回对象。
 
 ```js
   const parent = { name: 'lee' }
@@ -176,8 +179,10 @@ console.log(person.friends)
     newObj.num = '001'
     return newObj
   }
-  createChild(parent)
-  console.log(createChild(parent).name); // lee
+  const obj = createChild(parent);
+  console.log(obj); // { num: "001"}
+  console.log(obj.__proto__); // {name: "lee"}
+  console.log(obj.name); // lee
 ```
 
 好处：
@@ -203,7 +208,8 @@ function inheritPrototype(subType, superType) {
 }
 ```
 
-复制了超类原型的副本，而不必调用超类构造函数；既能够实现函数复用，又能避免引用类型实例被子类共享，同时创建子类只需要调用一次超类构造函数
+- 复制了父类原型的副本，而不必调用超类构造函数；
+- 既能够实现函数复用，又能避免引用类型实例被子类共享，同时创建子类只需要调用一次超类构造函数
 
 ### ES6继承
 
