--- a/js/复习/08-正则.md
+++ b/js/复习/08-正则.md
@@ -5,7 +5,8 @@
 ## 实现 trim ，去除首尾空格
 
 - ES5 `str.trim()`
-- 正则 `str.replace(/^\s+|\s+$/g, '')`
+- 正则 `str.replace(/(^\s*)|(\s*$)/g,'');`
+  - 原字符串不会改变
 
 ## 匹配查询字符串
 
@@ -16,9 +17,13 @@
  * @param {String} querystring 查询到的值
  * @return {String|undefined} 查询到返回String，没有返回undefined
  */
-function query (name, querystring) {
-  if (name && name.match(/(?:http[s]?:|^)\/{2}.*?(?:\.)/)) name = encodeURIComponent(name) // 仅编码Url
-  const r = (querystring + '').match(new RegExp('(?:^|&)\\s*?' + name + '\\s*=\\s*(.*?)\\s*(?:&|$)')) 
-  return r === null ? undefined : decodeURIComponent(r[1])
+function query(name, querystring) {
+  if (name && name.match(/(?:http[s]?:|^)\/{2}.*?(?:\.)/)) {
+    name = encodeURIComponent(name); // 仅编码Url
+  }
+  const r = (querystring + "").match(
+    new RegExp("(?:^|&)\\s*?" + name + "\\s*=\\s*(.*?)\\s*(?:&|$)")
+  );
+  return r === null ? undefined : decodeURIComponent(r[1]);
 }
 ```
