--- a/CSS/2-单位及盒模型.md
+++ b/CSS/2-单位及盒模型.md
@@ -99,3 +99,11 @@
 弹性盒模型基于盒模型，其宽度、高度、外边距都可以弹性变化，以适应弹性布局
 
 可以给父元素设置 `display:flex` 或 `display:inline-flex`，让子元素成为弹性盒子
+
+## 可继承的css属性
+
+- 不可继承的：`display、margin、border、padding、background、height、min-height、max-height、width、min-width、max-width、overflow、position、left、right、top、bottom、z-index、float、clear、table-layout、vertical-align`。
+- 所有元素可继承：`visibility和cursor`。
+- 内联元素可继承：`letter-spacing、word-spacing、white-space、line-height、color、font、font-family、font-size、font-style、font-variant、font-weight、text-decoration、text-transform、direction`。
+- 块状元素可继承：`text-indent和text-align`。
+- 列表元素可继承：`list-style、list-style-type、list-style-position、list-style-image`。
