--- a/CSS/3-布局.md
+++ b/CSS/3-布局.md
@@ -100,7 +100,9 @@
 
 ## 什么是块级格式上下文？
 
-定义：[块格式化上下文](https://developer.mozilla.org/zh-CN/docs/Web/Guide/CSS/Block_formatting_context)，英文全称Block Formatting Context
+### 定义
+
+[块格式化上下文](https://developer.mozilla.org/zh-CN/docs/Web/Guide/CSS/Block_formatting_context)，英文全称Block Formatting Context
 
 它声明了一块布局区域，浏览器对区域内盒子按照一定方式布局，包括默认布局、弹性布局flex、网格布局grid、表格布局等
 
@@ -108,7 +110,18 @@
 - 不同区域相互独立，区域内的盒子和区域外的盒子互不影响
 - 不同区域不会发生边框折叠
 
-创建：我们可以根据布局、溢出处理和有限布局，用不同的方法创建块级格式上下文
+### 规则
+
+- 属于同一个 BFC 的两个相邻 Box 垂直排列
+- 属于同一个 BFC 的两个相邻 Box 的 margin 会发生重叠
+- BFC 中子元素的 margin box 的左边， 与包含块 (BFC) border box的左边相接触 (子元素 absolute 除外)
+- BFC 的区域不会与 float 的元素区域重叠
+- 计算 BFC 的高度时，浮动子元素也参与计算
+- 文字层不会被浮动层覆盖，环绕于周围
+
+### 触发条件
+
+我们可以根据布局、溢出处理和有限布局，用不同的方法创建块级格式上下文
 
 - 根元素（`<html>`）
 - 浮动元素（元素的 float 不是 none）
@@ -125,7 +138,12 @@
 - 多列容器（元素的 column-count 或 column-width (en-US) 不为 auto，包括 column-count 为 1）
 - column-span 为 all 的元素始终会创建一个新的BFC，即使该元素没有包裹在一个多列容器中（标准变更，Chrome bug）
 
-用途：*清除浮动；解决外边框折叠；限定布局范围提高渲染性能*
+### 用途
+
+- 清除浮动；
+- 解决外边框折叠；
+- 自适应两栏布局；
+- 限定布局范围提高渲染性能
 
 ## 有哪些定位方式？
 
