--- a/其他/06-安全.md
+++ b/其他/06-安全.md
@@ -7,6 +7,7 @@
 **目标**：追踪用户
 
 **背景**：移动互联网 IP 经常变化，用户禁用 cookie
+
 **解决：**
 
 - Canvas Fingerprinting
@@ -47,6 +48,8 @@
 ## 对比各种分布式 ID 的生成方式？
 
 ### UUID
+
+Universally Unique Identifier 通用唯一标识码
 
 - 生成简单，本地生成
 - 无序无定义
@@ -90,6 +93,44 @@ CREATE TABLE ids_increment (
   - 服务器返回页面上callback包裹的json数据
   - 兼容性好
   - 仅支持GET
+
+    ```js
+    // index.html
+    function jsonp({ url, params, callback }) {
+      return new Promise((resolve, reject) => {
+        let script = document.createElement('script')
+        window[callback] = function(data) {
+          resolve(data)
+          document.body.removeChild(script)
+        }
+        params = { ...params, callback } // wd=b&callback=show
+        let arrs = []
+        for (let key in params) {
+          arrs.push(`${key}=${params[key]}`)
+        }
+        script.src = `${url}?${arrs.join('&')}`
+        document.body.appendChild(script)
+      })
+    }
+    jsonp({
+      url: 'http://localhost:3000/say',
+      params: { wd: 'Iloveyou' },
+      callback: 'show'
+    }).then(data => {
+      console.log(data)
+    })
+    // server.js
+    let express = require('express')
+    let app = express()
+    app.get('/say', function(req, res) {
+      let { wd, callback } = req.query
+      console.log(wd) // Iloveyou
+      console.log(callback) // show
+      res.end(`${callback}('我不爱你')`)
+    })
+    app.listen(3000)
+    ```
+
 - CORS (Cross-origin-resource-sharing)跨域资源共享
   - 简单请求，需满足以下两个条件：
     - GET HEAD POST
@@ -98,7 +139,7 @@ CREATE TABLE ids_increment (
       - multipart/form-data
       - application/x-www-form-urlencoded
   - 复杂请求：不满足以上条件
-    - 复杂请求的CORS请求，会在正式通信之前，增加一次HTTP查询请求，称为"预检"请求,该请求是 option 方法的，通过该请求来知道服务端是否允许跨域请求。
+    - 复杂请求的CORS请求，会在正式通信之前，增加一次HTTP查询请求，称为"预检"请求,该请求是 OPTION 方法的，通过该请求来知道服务端是否允许跨域请求。
 - [postMessage](https://developer.mozilla.org/zh-CN/docs/Web/API/Window/postMessage)
   - window属性
   - 跨窗口，跨框架iframe、frame，跨域
@@ -106,7 +147,7 @@ CREATE TABLE ids_increment (
 - document.domain
   - 主域名相同，子域名不同
   - 设置值为主域名 document.domain = 'test.com'
-- window.name
+- window.name + iframe
   - 不超过 2MB
     - 同一个iframe
     - 加载跨域页，跨域页设置 window.name
